# featcat

./: .claudeignore  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIX_REPORT.md  Makefile  PLAN.md  README.md  alembic.ini  dev.sh  featcat-mvp-test-prompts.md  mkdocs.yml  pyproject.toml
.claude/rules/: api.md  frontend.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml  pgvector-bench.yml  publish.yml  release-draft.yml
artifacts/: p0-3-mvp-fullsuite.csv  p0-3-mvp-off.csv  p0-3-mvp-on.csv  p0-3-tokens.csv
audits/: ai-chat-mvp-failure-analysis-2026-05-12.md  loading-states-audit-2026-05-12.md  p0-3-verification-2026-05-13.md  post-deep-fixes-2026-05-13.md  reusable-components-audit-2026-05-12.md
deploy/: .env.example  Dockerfile  README-vi.md  README.md  docker-compose.yml  setup.sh  start-server.sh
deploy/sandbox/: PLAN.md  README.md
deploy/sandbox/compose/: docker-compose.sandbox.yml  lab.env  local.env
deploy/sandbox/findings/: _TEMPLATE.md  run-2026-05-14-095841.md  run-2026-05-15-024551.md
deploy/sandbox/fixtures/: README.md  generate_synthetic.py  synthetic.parquet
deploy/sandbox/scripts/: exec-sandbox.sh  reset-sandbox.sh  start-sandbox.sh  status-sandbox.sh
docs/: BACKLOG.md  README-vi.md  admin-guide-vi.md  admin-guide.md  feature-organization-sprint-plan.md  index.md  setup-vi.md  setup.md  user-guide-vi.md  user-guide.md
docs/architecture/: ai.md  data.md  deployment.md  overview.md
docs/contributing/: benchmarks.md  setup.md  style.md  testing.md
docs/decisions/: similarity-lineage-evaluation.md
docs/getting-started/: first-feature.md  installation.md  notebook-quickstart.md
docs/ops/: backup.md  deployment.md  monitoring.md  troubleshooting.md
docs/reference/: api.md  catalog-schema.md  interfaces.md
docs/sdk/: cookbook.md  quickstart.md  reference.md
docs/superpowers/plans/: 2026-04-06-job-scheduler.md  2026-04-06-web-ui.md  2026-04-10-feature-versioning.md
docs/superpowers/specs/: 2026-04-06-job-scheduler-design.md  2026-04-06-web-ui-design.md  2026-04-10-feature-versioning-design.md
docs/user-guide/: ai.md  backup-restore.md  bulk.md  catalog.md  docs.md  groups.md  lineage.md  monitoring.md  notifications.md
featcat/: __init__.py  cli.py  config.py  sdk.py
featcat/ai/: __init__.py  agent.py  embeddings.py  executor.py  fallback.py  intent.py  session.py  tools.py
featcat/backup/: __init__.py  archive.py  dump.py  metadata.py  restore.py
featcat/catalog/: __init__.py  backend.py  context_builder.py  dataset_audit.py  db.py  exporter.py  factory.py  health.py  local.py  materialization.py  materialization_audit.py  materialization_scheduler.py  models.py  online_store.py  redis_store.py  remote.py  scanner.py  search.py  storage.py  training_dataset.py  usage.py
featcat/db/: __init__.py  connection.py  embedding_type.py  models.py
featcat/db/migrations/: env.py
featcat/demo/: __init__.py  fixture.py  loader.py
featcat/demo/data/: demo-catalog.json
featcat/diagnostics/: __init__.py  checks_data.py  checks_db.py  checks_deploy.py  checks_llm.py  checks_network.py  models.py  runner.py
featcat/lineage/: __init__.py  sql_detect.py
featcat/llm/: __init__.py  base.py  cached.py  llamacpp.py  ollama.py
featcat/plugins/: __init__.py  autodoc.py  base.py  discovery.py  monitoring.py  nl_query.py
featcat/server/: __init__.py  app.py  auth.py  cache.py  deps.py  glossary.py  scheduler.py
featcat/server/routes/: actions.py  admin.py  ai.py  auth.py  bulk.py  business_metrics.py  datasets.py  docs.py  entities.py  entity_relationships.py  export.py  feature_sets.py  feature_views.py  features.py  groups.py  health.py  jobs.py  lineage.py  monitor.py  notifications.py  online.py  scan.py  scheduler.py  search.py  sources.py  usage.py  versions.py
featcat/server/static/: chat.html  features.html  index.html  jobs.html  (+1 more)
featcat/setup/: __init__.py  detect.py  quickstart.py  templates.py  wizard.py
featcat/tasks/: __init__.py  app.py  docs.py  monitoring.py  sources.py
featcat/templates/: __init__.py
featcat/tui/: __init__.py  app.py
featcat/utils/: __init__.py  cache.py  catalog_context.py  lang.py  prompts.py  statistics.py
scripts/: benchmark_catalog.py  benchmark_llm.py  capture_demo_screenshots.ts  capture_lineage_screenshot.ts  check_docs_consistency.py  generate_synthetic_features.py  import_initial.py  measure_intent_savings.py  migrate_sqlite_to_postgres.py  probe_matrix_widths.ts  run_mvp_tests.py  smoke_materialization_online.sh  smoke_training_dataset_s3.sh
tests/: conftest.py  test-prompts.md  test_action_items.py  test_admin.py  test_agent.py  test_auth.py  test_autodoc.py  test_autodoc_context.py  test_backup_archive.py  test_backup_dump.py  test_backup_metadata.py  test_backup_restore.py  test_bulk_inventory.py  test_bulk_operations.py  test_business_metrics_routes.py  test_cache.py  test_catalog.py  test_celery_tasks.py  test_certification.py  test_chat_attachments.py  test_chat_route.py  test_chat_timeout.py  test_cli_backup.py  test_cli_bulk.py  test_cli_business_metrics.py  test_cli_demo.py  test_cli_doc_generate_context.py  test_cli_entities.py  test_cli_feature.py  test_cli_feature_registry.py  test_cli_group.py  test_cli_lineage.py  test_cli_online.py  test_cli_setup.py  test_cli_source.py  test_config.py  test_csv_ingestion.py  test_dataset_api_cli.py  test_dataset_build_audit.py  test_definitions.py  (+68 more)
tests/fixtures/: README.md  create_fixtures.py  device_performance.parquet  lineage-demo.json  user_behavior_30d.parquet
tests/perf/: __init__.py  conftest.py  test_pgvector_bench.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  auth.test.ts  auth.tsx  main.tsx
web/tests/: setup.ts
(+234 files in other folders)
